# python-genai-practise

./: .gitignore  pyproject.toml
agents/chat_with_pdf/: chat.py  index.py
agents/langgraph_learn/: chat.py  chat2.py  chat_checkpoint.py
agents/memory_agent/: mem.py
agents/rag_queue/: server.py
agents/rag_queue/client/: rq_client.py
agents/rag_queue/queues/: workers.py
agents/voice_agent/offline_demo/: main.py
agents/voice_agent/voice/: main.py
agents/weather_agent/: agent.py  main.py
genai/: gemini.py  openai-api.py  openai-compatible.py  tokenization.py
genai/groq/: checking_active_models.py
genai/local_llm/: huggingface_local_model.py  ollama_fastapi.py
genai/prompt_styles/: prompt_styles.md
genai/prompting_types/: chat_of_thoughts.py  few_shot_prompt.py  persona_based_prompting.py  zero_shot_prompt.py
local_agent/: main.py
pydantic_learn/: fmodel.py
sqlite3/: SQLite3_Assignment.ipynb  example.db
